# cosign

./: .gitignore  CHANGELOG  COPYRIGHT  Contributors  EXCLUDE  LICENSE  Makefile  Makefile.in  NOTES  README  README.basicauth  README.scripts  README.userfactor  README.weblogin  VERSION  aclocal.m4  configure  configure.ac  version.c  version.c.in
CAcerts/: entrust.pem
cgi/: Makefile  Makefile.in  basic.c  cgi.c  cosigncgi.h  factor.c  factor.h  install-html  login.c  login.h  logout.c  network.c  network.h  subfile.c  subfile.h  uservar.c  uservar.h
cgi/factors/: pam_factor.c
common/: Makefile.in  argcargv.c  argcargv.h  conf.c  conf.h  config.c  config.h  config.h.in  cosignproto.h  fbase64.c  fbase64.h  mkcookie.c  mkcookie.h  rate.c  rate.h  wildcard.c  wildcard.h
daemon/: Makefile  Makefile.in  command.c  command.h  cosign.conf.5  cosignd.8  cparse.c  cparse.h  daemon.c  logname.c  logname.h  mnet.c  monster.8  monster.c  monster.h  pusher.c  pusher.h
factors/: pam_factor.c
filters/apache/: EXCLUDE  Makefile  Makefile.in  NOTES  bprint.c  mod_cosign.c
filters/apache2/: Makefile.in  connect.c  cookiefs.c  cosign.h  krb524_err.h  mod_cosign.c  sparse.c  sparse.h
filters/common/: Makefile.in  connect.c  cookiefs.c  cosign.h  cosignpaths.h.in  log.h  sparse.c  sparse.h
filters/lighttpd/: Makefile.in  lighttpd-build.conf.in  logging.h  mod_cosign.c
friend/: NOTES
friend/php/: index.php
friend/php/create/: index.php
friend/php/lookup/: index.php
friend/php/passwd/: index.php
friend/php/reset/: index.php
friend/php/reset/passwd/: index.php
friend/php/reset/verify/: index.php
friend/php/set_passwd/: index.php
friend/smarty/templates/: create.tpl  error.tpl  error_bogus_request.tpl  error_bogus_reset.tpl  error_default_domain.tpl  footer.tpl  header.tpl  lookup.tpl  message.tpl  message_html.tpl  message_sent.tpl  msg_footer.tpl  msg_header.tpl  passwd.tpl  passwd_changed.tpl  passwd_has_been_reset.tpl  request.tpl  reset.tpl  reset_message.tpl  reset_message_html.tpl  reset_message_sent.tpl  reset_request.tpl  success.tpl  test.tpl  welcome_message.tpl  welcome_message_html.tpl
helloCosign/: helloCosign.jsp  helloCosign.php
html/: Makefile  Makefile.in  cosign.css  cosign_base.css  cosign_js.css  error.html  error.m4  expired_error.html  footer.html  forwarding.html  header.html  login.html  login.m4  login_error.html  login_error.m4  logout.html  looping.html  looping.m4  post_error.html  post_error.m4  reauth.html  reauth.m4  redirect.html  redirect.m4  service-footer.html  service-header.html  service-menu.html  service-menu.m4  splash.html  splash.m4  verify-logout.html  verify-logout.m4
html/js/: cosign.js  scriptaculous.js
html/services/: index.html
libcgi/: Makefile  Makefile.in  aclocal.m4  cgi.c  cgi.h  configure  configure.ac  parse.y  token.l
libsnet/: Makefile  Makefile.in  NOTES  aclocal.m4  config.h.in  configure  configure.ac  libtool.m4  ltmain.sh  snet.c  snet.h
scripts/cron/: cleanup
scripts/dbhash/: README  mkhashdirs  movehashdirs
scripts/factors/: 123magic.sh
scripts/factors/RSA/: Makefile  mtoken.c  notoken.c
scripts/hello/: helloCosign.php  helloCosign.pl  helloCosign.py
scripts/logout/: logout.php  logout.pl
scripts/startup/: configure.ac  cosignd
scripts/startup/debian/: cosignd.in  monster.in
scripts/startup/redhat/: cosignd.in  monster.in
scripts/startup/solaris10/: cosign.in  cosign.xml.in
tests/: tests.sh
tests/tests/: 001_cosignd_read_conf.test  002_cosignd_start.test  003_cosignd_crl.test  100_cgi_get_login.test  101_cgi_basic_auth.test  103_cgi_failed_login.test  103_cgi_pam_login.test  104_cgi_reauth.test  105_cgi_register_service.test  106_cgi_fuzzing_random_user.test  107_cgi_fuzzing_random_password.test  108_cgi_fuzzing_random_post.test  109_cgi_fuzzing_valid_chars.test  200_get_logout.test  201_cgi_logout.test
