# Process this file with autoconf to produce a configure script.
AC_INIT(cosignstartup,INTERNAL,cosign@umich.edu) 
AC_PREREQ(2.53)
AC_COPYRIGHT([Copyright (c) 2001-2002 Regents of The University of Michigan.  All Rights Reserved.])
AC_CONFIG_SRCDIR([cosignd])

# Checks for programs.
AC_CANONICAL_HOST 

AC_CONFIG_FILES([debian/cosignd
		 debian/monster
		 redhat/cosignd
		 redhat/monster
		 solaris10/cosign
		 solaris10/cosign.xml])

AC_OUTPUT
